Build tools moved outside
Correct some of findbugs